[fix] BatchTreeContainer: hide add fab button, whe batch group table is not visible

--- a/src/app/trip/batch/tree/batch-tree-container.component.scss
+++ b/src/app/trip/batch/tree/batch-tree-container.component.scss
@@ -6,6 +6,10 @@ mat-toolbar {
     /*font-family: var(--ion-font-family, inherit);*/
     font-size: inherit;
   }
+
+  .mat-button.mat-primary {
+    color: var(--ion-color-primary);
+  }
 }
 
 .form-container {
